fix: fix popup size & error visibility

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   max-width: 880px;
   margin: 0 auto 40px;
-  padding: 45px 0 0 0;
+  padding: 55px 0 0 0;
   box-sizing: border-box;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
