--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -1,6 +1,6 @@
 .popup__button {
   padding: 18px 124px 14px;
-  margin: 48px 0 0;
+  margin: 10px 0 0 0;
   background-color: #000;
   border-radius: 2px;
   border: none;
