--- a/blocks/popup/__input/_type/popup__input_type_job.css
+++ b/blocks/popup/__input/_type/popup__input_type_job.css
@@ -1,3 +1,3 @@
 .popup__input_type_job {
-  margin: 20px 0 5px 0;
+  margin: 0 0 5px 0;
 }
