--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input {
   background-color: transparent;
   border: none;
-  padding: 5px 0 9px 3px;
+  padding: 0 0 7px 0;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-style: normal;
   font-weight: 400;
