--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,5 +1,5 @@
 .popup__title {
-  margin: 0 0 43px;
+  margin: 0 0 48px;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
